@@ -1,3 +1,7 @@
+2002-08-15  David Welch  <welch@computer2.darkstar.org>
+
+	* lib/advapi32/misc/dllmain.c (DllMain): Removed debug message.
+
 2002-08-14  David Welch  <welch@computer2.darkstar.org>
 
 	* subsys/smss/init.c (SmPagingFilesQueryRoutine): If possible
